# isabelle-cabal-demo

./: README.md  ROOT  Setup.hs  Sort.thy  cabal.project  isabelle-cabal-demo.cabal
app/: Main.hs
