cabal-version:      3.4
name:               isabelle-cabal-demo
version:            0.1.0.0
synopsis:           Demo of Isabelle/Cabal integration
description:        This is a demo package showcasing a basic example of The Isabelle Cabal.
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Frederik Krogsdal Jacobsen
maintainer:         fkjac@dtu.dk
category:           Development

-- The build-type must be set to Custom, and the Setup.hs file must contain the same code as in this project.
build-type:         Custom

-- The ROOT file and the Isabelle theories needed for the session must be added here for distribution to work.
-- Note that this package uses a cabal.project file to find the isabelle-cabal package through git, so it also
-- needs to be included.
extra-source-files: ROOT
                  , Sort.thy
                  , cabal.project
                  , README.md

source-repository head
  type:     git
  location: https://github.com/fkj/isabelle-cabal-demo

-- This stanza is necessary to make Cabal find The Isabelle Cabal when running Setup.hs.
custom-setup
  setup-depends: base ^>=4.17.0.0
               , isabelle-cabal ^>=0.1.0.0

library
    -- The session must be set to the session defined in the ROOT file.
    x-isabelle-session: Sort
    -- This pattern selects all exported code files, but filters out any other exports.
    x-isabelle-pattern: *:**code**
    -- The Isabelle theories and ROOT file are all in the root directory of the package.
    x-isabelle-src-dir: .
    -- This removes prefixes from the Isabelle exports so the modules are directly available.
    x-isabelle-prune:   3

    -- This package exposes all of the exported modules, but you don't have to do so.
    -- Any modules you don't want to expose should go in the other-modules field instead.
    exposed-modules:  Sort
                    , Orderings
    -- The names of all autogenerated modules must go here for distribution of your package to work.
    autogen-modules: Sort
                   , Orderings
    build-depends:    base ^>=4.17.0.0

    -- You can still add additional (non-exported) Haskell code in the hs-source-dirs field if you want to.

executable isabelle-cabal-demo
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.0.0,
        isabelle-cabal-demo

    hs-source-dirs:   app
    ghc-options:      -Wall
